# DereInfo

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: android.yml
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/kyhsgeekcode/dereinfo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cgssh.h  dereinfo.cpp
app/src/main/cpp/common/: acbextract.h  utils.h
app/src/main/cpp/common/acbextract/: acbextract.cpp
app/src/main/cpp/lib/capi/: cgss_capi.cpp
app/src/main/cpp/lib/cdata/: ACB_CUE_RECORD.h  UTF_FIELD.h
app/src/main/cpp/lib/ichinose/: CAcbFile.cpp  CUtfField.cpp  CUtfTable.cpp
app/src/main/cpp/lib/jni/helpers/: jni_helper_reflection.h
app/src/main/cpp/lib/jni/modules/kawashima/: HcaCipherConfig.h  HcaCipherConverter.cpp  HcaDecoder.cpp  HcaDecoderConfig.h  HcaFormatReader.cpp
app/src/main/cpp/lib/jni/modules/takamori/: FileStream.cpp  MemoryStream.cpp  NativeStream.cpp
app/src/main/java/com/kyhsgeekcode/dereinfo/: AppDatabase.kt  CgssUtil.kt  CrashReportingTree.kt  DBModule.kt  DereDatabaseHelper.kt  DereDatabaseModule.kt  DereInfoApplication.kt  DereMusicData.kt  DereToTW.kt  DeresuteDatabase.kt  ExportHelper.kt  Extensions.kt  FileDataCache.kt  FilterAlertDialogFragment.kt  FlickMode.kt  FumenFragment.kt  FumenRenderer.kt  FumenViewModel.kt  MainActivity.kt  MusicInfo.kt  Note.kt  OneDifficulty.kt  OneMusic.kt  SerializableSparseArray.kt  SongDetailActivity.kt  SongDetailFragment.kt  SongListActivity.kt  SongRecyclerViewAdapter.kt  SortAlertDialogFragment.kt  StartActivity.kt  TWMode.kt  TWWriter.kt  UnitDetailActivity.kt  UnitDetailFragment.kt  UnitListActivity.kt  UnitManageActivity.kt  Utils.kt
app/src/main/java/com/kyhsgeekcode/dereinfo/api/: API.kt
app/src/main/java/com/kyhsgeekcode/dereinfo/calc/: CGCalc.kt  CGCalcService.kt
app/src/main/java/com/kyhsgeekcode/dereinfo/cardunit/: Card.kt  CardData.kt  CardDataModel.kt  CardModel.kt  CardUnit.kt  CardUnitWithGuest.kt  CenterSkill.kt  ISkillLifeValueModel.kt  ISkillMotifValueModel.kt  IUnit.kt  LeaderSkillModel.kt  Potential.kt  Rarity.kt  Skill.kt  SkillBoostModel.kt  SkillLifeValueGrandModel.kt  SkillLifeValueModel.kt  SkillModel.kt  SkillMotifValueGrandModel.kt  SkillMotifValueModel.kt  Unit.kt
app/src/main/java/com/kyhsgeekcode/dereinfo/dao/: CardDataDao.kt  LeaderSkillDataDao.kt  LiveDataDao.kt  MusicDataDao.kt  SkillBoostTypeDao.kt  SkillDataDao.kt  SkillLifeValueDao.kt  SkillLifeValueGrandDao.kt  SkillMotifValueDao.kt  SkillMotifValueGrandDao.kt  SongListDao.kt
app/src/main/java/com/wanakanajava/: WanaKanaJava.kt
app/src/main/res/drawable/: shape_gradient_disabled.xml  shape_gradient_round.xml  shape_gradient_selected.xml
app/src/main/res/layout/: activity_song_detail.xml  activity_song_list.xml  activity_start.xml  activity_unit_detail.xml  activity_unit_list.xml  activity_unit_manage.xml  card_list_content.xml  content_scrolling.xml  dialog_filter.xml  dialog_sort.xml  fumen_fragment.xml  song_detail.xml  song_list.xml  song_list_content.xml  song_list_sub_grand.xml  song_list_sub_masterplus.xml  song_list_sub_normal.xml  song_list_sub_smart.xml  song_list_sub_witch.xml  unit_detail.xml  unit_list.xml  unit_list_content.xml
app/src/main/res/layout-w900dp/: song_list.xml  unit_list.xml
app/src/main/res/menu/: detail_menu.xml  main_menu.xml  menu_unit_manage.xml
app/src/main/res/values/: colors.xml  difficulties.xml  dimens.xml  sort_conditions.xml  strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/xml/: file_provider.xml  searchable.xml
app/src/test/java/com/kyhsgeekcode/dereinfo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+50 files in other folders)
